samples/_failures_safe/1761459903_da1c86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_774b362c.c: In function ‘main’:
./samples/SAFE/__tmp_774b362c.c:147:12: error: missing terminating " character
  147 |     printf("\nMatrix 1:\
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_774b362c.c:147:5: error: expected expression at end of input
  147 |     printf("\nMatrix 1:\
      |     ^~~~~~
./samples/SAFE/__tmp_774b362c.c:147:5: error: expected declaration or statement at end of input
